# mcgame

./: CMakeLists.txt  main.cpp
gamestate/: CMakeLists.txt
gamestate/include/: gamestate.h  universe.h
gamestate/src/: gamestate.cpp
include/: animated_entity.h  drawing.h  image_library.h  resources.h  screen.h  tile_set_manager.h  tiles.h
src/: drawing.cpp  image_library.cpp  screen.cpp  tile_set_manager.cpp  tiles.cpp
